<resources>
    <string name="app_name">Stone Paper Scissor</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="start_btn_txt">Start</string>
    <string name="stone_icon">Stone</string>
    <string name="paper_icon">paper_icon</string>
    <string name="scissor_icon">scissor_icon</string>
    <string name="choose_one">Choose One</string>
    <string name="your_choice">Your Choice</string>
    <string name="computer_choice">Computer\'s Choice</string>
    <string name="draw_message">It\'s a Draw, </string>
</resources>