<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".GameActivity">


    <ImageView
        android:id="@+id/stoneIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/stone_icon"
        android:onClick="userChoice"
        android:src="@drawable/stone_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintWidth_percent=".3" />

    <ImageView
        android:id="@+id/paperIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/paper_icon"
        android:onClick="userChoice"
        android:src="@drawable/paper_icon"
        app:layout_constraintBottom_toBottomOf="@+id/stoneIcon"
        app:layout_constraintEnd_toStartOf="@+id/scissorIcon"
        app:layout_constraintStart_toEndOf="@+id/stoneIcon"
        app:layout_constraintTop_toTopOf="@+id/stoneIcon"
        app:layout_constraintWidth_percent=".3" />

    <ImageView
        android:id="@+id/scissorIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/scissor_icon"
        android:onClick="userChoice"
        android:src="@drawable/scissor_icon"
        app:layout_constraintBottom_toBottomOf="@+id/paperIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paperIcon"
        app:layout_constraintWidth_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <!--    <TextView-->
    <!--        android:id="@+id/gameInstruction"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fontFamily="sans-serif-condensed"-->
    <!--        android:text="Choose One"-->
    <!--        android:textSize="24sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/paperIcon" />-->


    <TextView
        android:id="@+id/yourChoiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/paperIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/computerChoiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_choice"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computerChoiceImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="Computer's Choice image"
        android:src="@drawable/paper_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerChoiceText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Choose One"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="101dp" />

</androidx.constraintlayout.widget.ConstraintLayout>